--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@mui/material-next": "^6.0.0-alpha.112",
     "@mui/x-data-grid": "^6.18.3",
     "@mui/x-data-grid-generator": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.3",
